concord_macros/tests/dsl/fail/fail_generated_local_self_in_policy_expr.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client GeneratedLocalSelfPolicyApi {
        base "https://example.com"
    }

    GET Ping
    path ["ping"]
    header "X-Leak" = self.token
    -> Text<String>
}

fn main() {}
